# NewtonianNoiseCA

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  container.sh  environment.yml  run.sh
build-container/: CMakeCache.txt  Integrator_anisotropic_tbb  Integrator_isotropic_tbb  Makefile  cmake_install.cmake
cmake/: AddExample.cmake  AddTarget.cmake  FindTBB.cmake
core/: Types.h  Utils.h
core/functions/: CorrelationModels.h  SgAnisotropic.h  SgIsotropic.h
etc/: ROOTstyle.C  configuration_anisotropic.cfg  configuration_isotropic.cfg
scripts/: README.md  asymptotics.py  build.sh  nnlib.py  plot_depth.py  plot_spectra.py  run_production.slurm  run_scan.py  tune_vegas.py
src/: Integrator_anisotropic.cu  Integrator_anisotropic.inl  Integrator_isotropic.cpp  Integrator_isotropic.cu  Integrator_isotropic.inl
